--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <!-- CSS Libraries -->
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-        <link href="lib/slick/slick.css" rel="stylesheet">
-        <link href="lib/slick/slick-theme.css" rel="stylesheet">
-        <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+        <link href="isotoped/slick/slick.css" rel="stylesheet">
+        <link href="isotoped/slick/slick-theme.css" rel="stylesheet">
+        <link href="isotoped/lightbox/css/lightbox.min.css" rel="stylesheet">
 
         <!-- Template Stylesheet -->
-        <link href="css/style.css" rel="stylesheet">
+        <link href="cs/style.css" rel="stylesheet">
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -297,8 +297,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-des">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-1.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-1.jpg" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="photo/portfolio-1.jpg" class="img-fluid" alt="">
+                                        <a href="photo/portfolio-1.jpg" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#">Project Name <span>Web Design</span></a>
                                     </figure>
@@ -308,8 +308,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-des">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-2.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="photo/portfolio-2.jpg" class="img-fluid" alt="">
+                                        <a href="photo/portfolio-2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#">Project Name <span>Web Design</span></a>
                                     </figure>
@@ -319,8 +319,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-dev">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-3.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="photo/portfolio-3.jpg" class="img-fluid" alt="">
+                                        <a href="photo/portfolio-3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#">Project Name <span>Web Development</span></a>
                                     </figure>
@@ -330,8 +330,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item web-dev">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-4.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-4.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="photo/portfolio-4.jpg" class="img-fluid" alt="">
+                                        <a href="photo/portfolio-4.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#">Project Name <span>Web Development</span></a>
                                     </figure>
@@ -341,8 +341,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item dig-mar">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-5.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="photo/portfolio-5.jpg" class="img-fluid" alt="">
+                                        <a href="photo/portfolio-5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#">Project Name <span>Digital Marketing</span></a>
                                     </figure>
@@ -352,8 +352,8 @@
                             <div class="col-lg-4 col-md-6 portfolio-item dig-mar">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-6.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-6.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="photo/portfolio-6.jpg" class="img-fluid" alt="">
+                                        <a href="photo/portfolio-6.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#">Project Name <span>Digital Marketing</span></a>
                                     </figure>
@@ -451,9 +451,9 @@
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/slick/slick.min.js"></script>
-        <script src="lib/typed/typed.min.js"></script>
+        <script src="cs/easing/lib/easing/easing.min.js"></script>
+        <script src="isotoped/slick.min.js"></script>
+        <script src="isotped/typed.min.js"></script>
         <script src="lib/waypoints/waypoints.min.js"></script>
         <script src="lib/isotope/isotope.pkgd.min.js"></script>
         <script src="lib/lightbox/js/lightbox.min.js"></script>
