--- a/index.html
+++ b/index.html
@@ -454,11 +454,11 @@
         <script src="cs/easing/lib/easing/easing.min.js"></script>
         <script src="isotoped/slick.min.js"></script>
         <script src="isotped/typed.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/isotope/isotope.pkgd.min.js"></script>
-        <script src="lib/lightbox/js/lightbox.min.js"></script>
+        <script src="waypoints/waypoints.min.js"></script>
+        <script src="cs/lib/isotope.pkgd.min.js"></script>
+        <script src="cs/lib/lightbox.min.js"></script>
         
         <!-- Template Javascript -->
-        <script src="js/main.js"></script>
+        <script src="css/js/main.js"></script>
     </body>
 </html>
